# monosemantic-features

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  what-we-think-we-know.md
docs/: investigation-epsilon-neighbors.md
docs/plans/: 2026-01-20-testing-infrastructure-design.md  2026-01-20-testing-infrastructure-implementation.md  2026-01-24-epsilon-orthogonal-basis-design.md  2026-01-24-epsilon-orthogonal-basis-impl.md  2026-01-24-neighborhood-minimality-design.md
experiments/: investigate_clusters.py  run_experiment.py
notebooks/: debug_extraction.ipynb  epsilon_orth_feature.ipynb  gemma2b_exploration.ipynb  target_selection.ipynb  walkthrough.ipynb
notebooks/.ipynb_checkpoints/: debug_extraction-checkpoint.ipynb
scripts/: tau_sweep.py  validate_dotproduct.py
src/: config.py  extraction.py  logging_utils.py  metrics.py  synthetic.py
tests/: test_config.py  test_experiment.py  test_extraction.py  test_integration.py  test_metrics.py  test_synthetic.py
writeup/: main.bib  main.tex
writeup/sec/: 1_intro.tex  2_background.tex  3_method.tex
